--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,24 @@
 <header>
   <div class="header">
-
-    <div class="header-burger"></div>
-
-    <div class="header-logo">
-      <span>Logo</span>
+    <div class="header-burger">
+      <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <div class="header-logo mFlex mAlignItemsCenter">
+      <i class="fa fa-code" aria-hidden="true"></i>
       <h2>lorem ipsum</h2>
     </div>
-
     <app-navbar></app-navbar>
-
-<!--    &lt;!&ndash;flex container #3&ndash;&gt;-->
-<!--    <div class="header-menuTwo">-->
-<!--      <ul class="mNoMargingNoPadding mHeaderListStyles">-->
-<!--        <li>One</li>-->
-<!--        <li>Two</li>-->
-<!--        <li>Three</li>-->
-<!--      </ul>-->
-<!--    </div>-->
-
+    <div class="header-rightMenu mFlex mAlignItemsCenter">
+      <ul class="mNoMargingNoPadding mHeaderListStyles">
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+      </ul>
+    </div>
+    <div class="header-avatar mFlex mAlignItemsCenter">
+      <a href="#">
+        <img class="header-rightMenu-avatar" src="../../../assets/img/avatar.JPG" alt="avatar">
+      </a>
+    </div>
   </div>
 </header>
