--- a/src/app/global.variables.scss
+++ b/src/app/global.variables.scss
@@ -3,3 +3,4 @@ $headerHoverCol: #033681;
 $textCol: #f0f0f0;
 $buttonCol: #2684ff;
 $buttonHoverCol: #549EFF;
+$fontFamily: Verdana, Geneva, sans-serif;
