--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="navbar">
   <nav>
     <ul class="navbar-main">
-      <li><a routerLink="/home">Home page</a></li>
-      <li><a routerLink="/todos">Todo list</a></li>
-      <li><a routerLink="/forms">Forms</a></li>
-      <li><a routerLink="#">Page B</a></li>
-      <li><a routerLink="#">Page C</a></li>
+      <li><a routerLink="/home">Home</a></li>
+      <li><a routerLink="/todos">Todolist</a></li>
+      <li><a routerLink="#">Forms</a></li>
+      <li><a routerLink="#">Glossary</a></li>
+      <li><a routerLink="#">Contacts</a></li>
     </ul>
   </nav>
 </div>
